# MoonUI

./: .editorconfig  .gitattributes  .gitignore  Cargo.toml  NOTICE  README.md
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: moonui-guardrails.yml
crates/: transform-metadata.json
crates/moon-collections/: Cargo.toml
crates/moon-derive-refineable/: Cargo.toml  LICENSE-APACHE
crates/moon-gpui/: Cargo.toml
crates/moon-gpui-linux/: Cargo.toml
crates/moon-gpui-linux/src/linux/: platform.rs
crates/moon-gpui-linux/src/linux/wayland/: client.rs  window.rs
crates/moon-gpui-linux/src/linux/x11/: client.rs  window.rs
crates/moon-gpui-macos/: Cargo.toml
crates/moon-gpui-macos/src/: metal_atlas.rs  metal_renderer.rs  shaders.metal  window.rs
crates/moon-gpui-macros/: Cargo.toml
crates/moon-gpui-platform/: Cargo.toml
crates/moon-gpui-shared-string/: Cargo.toml
crates/moon-gpui-util/: Cargo.toml
crates/moon-gpui-web/: Cargo.toml
crates/moon-gpui-web/examples/hello_web/: LICENSE-APACHE
crates/moon-gpui-web/src/: dispatcher.rs  platform.rs  window.rs
crates/moon-gpui-wgpu/: Cargo.toml
crates/moon-gpui-wgpu/benches/: layout_line.rs
crates/moon-gpui-wgpu/src/: shaders.wgsl  shaders_subpixel.wgsl  wgpu_atlas.rs  wgpu_context.rs  wgpu_renderer.rs
crates/moon-gpui-windows/: Cargo.toml
crates/moon-gpui-windows/src/: direct_write.rs  directx_atlas.rs  directx_renderer.rs  events.rs  platform.rs  shaders.hlsl  window.rs  wrapper.rs
crates/moon-gpui/examples/: gpu_canvas.rs
crates/moon-gpui/src/: gpu_canvas.rs  gpui.rs  platform.rs  scene.rs  styled.rs  svg_renderer.rs  text_system.rs  window.rs
crates/moon-gpui/src/platform/test/: window.rs
crates/moon-http-client/: Cargo.toml
crates/moon-http-client-tls/: Cargo.toml
crates/moon-media/: Cargo.toml
crates/moon-perf/: Cargo.toml  LICENSE-APACHE
crates/moon-refineable/: Cargo.toml
crates/moon-reqwest-client/: Cargo.toml
crates/moon-scheduler/: Cargo.toml
crates/moon-sum-tree/: Cargo.toml
crates/moon-ui/: Cargo.toml
crates/moon-ui-components/: Cargo.toml  component-manifest.json
crates/moon-ui-components-assets/: Cargo.toml
crates/moon-ui-components-macros/: Cargo.toml
crates/moon-ui-components/src/: badge.rs  checkbox.rs  element_ext.rs  hover_card.rs  label.rs  lib.rs  moon_skin.rs  popover.rs  radio.rs  root.rs  select.rs  slider.rs  styled.rs  tree.rs  window_border.rs  window_ext.rs
crates/moon-ui-components/src/button/: button.rs
crates/moon-ui-components/src/dialog/: dialog.rs
crates/moon-ui-components/src/input/: element.rs  input.rs  search.rs  state.rs
crates/moon-ui-components/src/input/popovers/: mod.rs
crates/moon-ui-components/src/list/: list_item.rs
crates/moon-ui-components/src/menu/: menu_item.rs  popup_menu.rs
crates/moon-ui-components/src/moon/: accordion.rs  alert.rs  avatar.rs  background.rs  badge.rs  breadcrumb.rs  button.rs  checkbox.rs  chrome.rs  collapsible.rs  color_picker.rs  combobox.rs  context_menu.rs  data_table.rs  date_picker.rs  description_list.rs  dialog.rs  dock.rs  dropdown.rs  form.rs  foundation.rs  group_box.rs  hotkey_input.rs  hover_card.rs  icons.rs  index_path.rs  input.rs  input_mask.rs  kbd.rs  label.rs  link.rs  list.rs  menu.rs  mod.rs  notification.rs  pagination.rs  placement.rs  popover.rs  preset.rs  progress.rs  (+33 more)
crates/moon-ui-components/src/native_menu/: fallback.rs  mod.rs  windows.rs
crates/moon-ui-components/src/resizable/: panel.rs
crates/moon-ui-components/src/searchable_list/: item.rs
crates/moon-ui-components/src/sidebar/: footer.rs  header.rs  menu.rs
crates/moon-ui-components/src/table/: table.rs
crates/moon-ui-components/src/theme/: default-theme.json  mod.rs
crates/moon-ui-components/themes/: moon-light.toml  moon-terminal.toml
crates/moon-ui-gallery/: Cargo.toml  README.md
crates/moon-ui-gallery/src/: main.rs
crates/moon-ui/src/: lib.rs
crates/moon-util/: Cargo.toml
crates/moon-util-macros/: Cargo.toml
crates/moon-zlog/: Cargo.toml
crates/moon-ztracing/: Cargo.toml
crates/moon-ztracing-macro/: Cargo.toml
docs/: COMPONENT_AUDIT.md  GPU_CANVAS_TEXT_API.md  MOON_PATCH_QUEUE.md  PALETTE_SPEC.md  VISUAL_GUARDRAILS.md  WORKLOG_COMPONENT_REFACTOR.md  component-api-baseline.json  component-api-removals.json  component-audit-baseline.json  component-class-migrations.json  component-mirror-baseline.json
tools/: capture-design-handoff.ps1  capture-gallery-snapshots.ps1  run-component-guardrails.ps1
xtask/: Cargo.toml
xtask/src/: component_api.rs  component_audit.rs  component_mirror.rs  main.rs  transform.rs
