[workspace]
resolver = "2"
members = [
    "xtask",
    "crates/moon-gpui-util",
    "crates/moon-gpui-shared-string",
    "crates/moon-collections",
    "crates/moon-derive-refineable",
    "crates/moon-refineable",
    "crates/moon-perf",
    "crates/moon-util-macros",
    "crates/moon-util",
    "crates/moon-scheduler",
    "crates/moon-sum-tree",
    "crates/moon-http-client",
    "crates/moon-http-client-tls",
    "crates/moon-reqwest-client",
    "crates/moon-media",
    "crates/moon-gpui-macros",
    "crates/moon-gpui",
    "crates/moon-gpui-wgpu",
    "crates/moon-gpui-macos",
    "crates/moon-gpui-linux",
    "crates/moon-gpui-windows",
    "crates/moon-gpui-web",
    "crates/moon-gpui-platform",
    "crates/moon-ui",
    "crates/moon-ui-gallery",
    "crates/moon-ui-components",
    "crates/moon-ui-components-assets",
    "crates/moon-ui-components-macros",
]

[workspace.package]
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/Moonbot-Tech/MoonUI"

[workspace.dependencies]
gpui-component = { package = "moon-ui-components", path = "crates/moon-ui-components" }
gpui-component-assets = { package = "moon-ui-components-assets", path = "crates/moon-ui-components-assets" }
gpui-component-macros = { package = "moon-ui-components-macros", path = "crates/moon-ui-components-macros" }

gpui = { package = "moon-gpui", path = "crates/moon-gpui" }
gpui_macros = { package = "moon-gpui-macros", path = "crates/moon-gpui-macros" }
gpui_platform = { package = "moon-gpui-platform", path = "crates/moon-gpui-platform", features = ["font-kit", "x11", "wayland", "runtime_shaders"] }
gpui_web = { package = "moon-gpui-web", path = "crates/moon-gpui-web" }
reqwest_client = { package = "moon-reqwest-client", path = "crates/moon-reqwest-client" }
sum-tree = { package = "moon-sum-tree", path = "crates/moon-sum-tree" }

anyhow = "1"
log = "0.4"
lsp-types = { version = "0.97.0", features = ["proposed"] }
notify = "7.0.0"
raw-window-handle = "0.6.2"
ropey = { version = "=2.0.0-beta.1", features = [
    "metric_lines_lf",
    "metric_utf16",
] }
rust-i18n = "4"
schemars = "1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1"
serde_repr = "0.1"
smallvec = "1"
smol = "2"
tracing = "0.1.41"
wasm-bindgen = "0.2.113"
reqwest = { version = "0.12.15-zed", package = "zed-reqwest", default-features = false, features = [
    "charset",
    "http2",
    "macos-system-configuration",
    "multipart",
    "rustls-tls-native-roots",
    "socks",
    "stream",
] }

[workspace.dependencies.windows]
features = ["Wdk", "Wdk_System", "Wdk_System_SystemServices"]
version = "0.58.0"

[workspace.lints.clippy]
almost_complete_range = "allow"
arc_with_non_send_sync = "allow"
borrowed_box = "allow"
dbg_macro = "deny"
let_underscore_future = "allow"
manual_is_multiple_of = "allow"
map_entry = "allow"
module_inception = "allow"
non_canonical_partial_ord_impl = "allow"
reversed_empty_ranges = "allow"
single_range_in_vec_init = "allow"
style = { level = "allow", priority = -1 }
todo = "deny"
type_complexity = "allow"
useless_conversion = "allow"
