[package]
name = "moon-collections"
version = "0.0.0"
edition = "2024"
publish = false
license = "Apache-2.0"
description = "Standard collection types used by Zed and GPUI"
repository = "https://github.com/Moonbot-Tech/MoonUI"

[lib]
path = "src/collections.rs"
doctest = false

[features]
test-support = []

[dependencies]
indexmap = { version = "2.7.0", features = ["serde"] }
rustc-hash = { version = "2.1.0" }
gpui_util = { package = "moon-gpui-util", path = "../moon-gpui-util" }
