[package]
name = "moon-derive-refineable"
version = "0.0.0"
edition = "2024"
publish = false
license = "Apache-2.0"
description = "A derive macro for creating refinement types in Rust"
repository = "https://github.com/Moonbot-Tech/MoonUI"

[lib]
path = "src/derive_refineable.rs"
proc-macro = true
doctest = false

[dependencies]
proc-macro2 = { version = "1.0.93" }
quote = { version = "1.0.9" }
syn = { version = "2.0.101", features = ["full", "extra-traits", "visit-mut"] }
