[package]
name = "moon-gpui-shared-string"
version = "0.0.0"
publish = false
edition = "2024"
repository = "https://github.com/Moonbot-Tech/MoonUI"
license = "Apache-2.0"
description = "Moon standalone build of Zed's gpui_shared_string crate"

[lib]
path = "gpui_shared_string.rs"

[dependencies]
schemars = { version = "1.0", features = ["indexmap2"] }
serde = { version = "1.0.221", features = ["derive", "rc"] }
smol_str = "0.3.6"
