[package]
name = "moon-gpui-util"
version = "0.0.0"
publish = false
edition = "2024"
repository = "https://github.com/Moonbot-Tech/MoonUI"
license = "Apache-2.0"
description = "Moon standalone build of Zed's gpui_util crate"

[dependencies]
log = { version = "0.4.16", features = ["kv_unstable_serde", "serde"] }
anyhow = { version = "1.0.86" }

[target.'cfg(target_os = "windows")'.dependencies]
which = { version = "6.0.0" }
