[package]
name = "moon-http-client-tls"
version = "0.0.0"
edition = "2024"
publish = false
license = "Apache-2.0"
repository = "https://github.com/Moonbot-Tech/MoonUI"
description = "Moon standalone build of Zed's http_client_tls crate"

[features]
test-support = []

[lib]
path = "src/http_client_tls.rs"
doctest = true

[dependencies]
rustls = { version = "0.23.26" }
rustls-platform-verifier = { version = "0.5.0" }
