[package]
name = "moon-scheduler"
version = "0.0.0"
edition = "2024"
publish = false
license = "Apache-2.0"
repository = "https://github.com/Moonbot-Tech/MoonUI"
description = "Moon standalone build of Zed's scheduler crate"

[lib]
path = "src/scheduler.rs"
doctest = false

[features]
test-support = []

[dependencies]
async-task = { version = "4.7" }
backtrace = { version = "0.3" }
chrono = { version = "0.4", features = ["serde"] }
flume = "0.11"
futures = { version = "0.3.32" }
parking_lot = { version = "0.12.1" }
rand = { version = "0.9" }
web-time = { version = "1.1.0" }
