[package]
name = "moon-sum-tree"
version = "0.0.0"
edition = "2024"
publish = false
license = "Apache-2.0"
description = "A sum tree data structure, a concurrency-friendly B-tree"
repository = "https://github.com/Moonbot-Tech/MoonUI"

[lib]
path = "src/sum_tree.rs"
doctest = false

[dependencies]
heapless = { version = "0.9.2" }
rayon = { version = "1.8" }
log = { version = "0.4.16", features = ["kv_unstable_serde", "serde"] }
tracing = { version = "0.1.40" }
proptest = { version = "1", optional = true, features = ["attr-macro"] }

[dev-dependencies]
rand = { version = "0.9" }
proptest = { version = "1", features = ["attr-macro"] }


[package.metadata.cargo-machete]
ignored = ["tracing"]

[features]
test-support = ["dep:proptest"]
proptest = ["dep:proptest"]
