[package]
name = "moon-ui-components-assets"
description = "Bundled assets for Moon UI components."
keywords = ["desktop", "gpui", "moon", "ui", "uikit"]
license = "Apache-2.0"
documentation = "https://github.com/Moonbot-Tech/MoonUI"
homepage = "https://moonbot.pro"
repository.workspace = true
readme = "README.md"
edition.workspace = true
publish = false
version = "0.1.0"

# `links` is the documented cargo mechanism for sharing build-time metadata
# across the dep graph: every dependent (regular OR build-dep) receives the
# `cargo:KEY=VALUE` lines from our build.rs as `DEP_<links>_<KEY>` env vars
# in its own build script. We use this to publish the absolute path of our
# `assets/icons` directory so `gpui-component` can generate its `IconName`
# enum at proc-macro expansion time without a sibling-crate reference
# (which would break under `cargo vendor` / `cargo publish`). The value is
# conventionally a native-library name; we use a unique identifier scoped
# to this crate's purpose. Cargo enforces uniqueness across the build
# graph, which also prevents accidental double-linkage in dependents.
links = "gpui-component-default-icons"

[lib]
name = "gpui_component_assets"
doctest = false

[dependencies]
anyhow.workspace = true
gpui.workspace = true
log.workspace = true

[target.'cfg(not(target_family = "wasm"))'.dependencies]
rust-embed = { version = "8.7.2", features = ["interpolate-folder-path", "include-exclude"] }

[target.'cfg(target_family = "wasm")'.dependencies]
reqwest = { workspace = true }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
