[package]
name = "moon-ui-components-macros"
description = "Macros for Moon UI components."
version = "0.1.0"
license = "Apache-2.0"
publish = false
edition.workspace = true
repository.workspace = true

[lib]
name = "gpui_component_macros"
proc-macro = true

[lints]
workspace = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = "2.0"

[package.metadata.cargo-machete]
ignored = ["proc-macro2", "core-text"]
