[package]
name = "moon-ui-gallery"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Runnable MoonUI component gallery for visual and API coverage."
publish = false

[dependencies]
gpui = { workspace = true }
gpui_platform = { workspace = true }
moon-ui = { path = "../moon-ui" }

[lints]
workspace = true
