[package]
name = "moon-ui-gallery"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Runnable MoonUI component gallery for visual and API coverage."
publish = false

[features]
snapshot = ["gpui/test-support"]

[dependencies]
gpui = { workspace = true }
gpui_platform = { workspace = true }
image = { version = "0.25.1" }
moon-ui = { path = "../moon-ui" }

[dev-dependencies]
serde = { workspace = true }
serde_json = { workspace = true }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
] }

[lints]
workspace = true
