[package]
name = "moon-util-macros"
version = "0.0.0"
edition = "2024"
publish = false
license = "Apache-2.0"
description = "Utility macros for Zed"
repository = "https://github.com/Moonbot-Tech/MoonUI"

[lib]
path = "src/util_macros.rs"
proc-macro = true
doctest = false

[dependencies]
quote = { version = "1.0.9" }
syn = { version = "2.0.101", features = ["full", "extra-traits", "visit-mut"] }
perf = { package = "moon-perf", path = "../moon-perf" }

[features]
perf-enabled = []

[lints]
rust = { unexpected_cfgs = { level = "warn", check-cfg = ["cfg(perf_enabled)"] } }
