[package]
name = "moon-zlog"
version = "0.0.0"
edition = "2024"
publish = false
license = "GPL-3.0-or-later"
repository = "https://github.com/Moonbot-Tech/MoonUI"
description = "Moon standalone build of Zed's zlog crate"

[lib]
path = "src/zlog.rs"

[features]
default = []

[dependencies]
collections = { package = "moon-collections", path = "../moon-collections" }
chrono = { version = "0.4", features = ["serde"] }
log = { version = "0.4.16", features = ["kv_unstable_serde", "serde"] }
anyhow = { version = "1.0.86" }

[dev-dependencies]
tempfile = { version = "3.20.0" }
