[package]
name = "moon-ztracing"
version = "0.0.0"
edition = "2024"
publish = false
license = "GPL-3.0-or-later"
repository = "https://github.com/Moonbot-Tech/MoonUI"
description = "Moon standalone build of Zed's ztracing crate"

[features]
tracy = ["tracing-tracy", "tracy-client"]

[dependencies]
zlog = { package = "moon-zlog", path = "../moon-zlog" }
tracing = { version = "0.1.40" }

tracing-subscriber = "0.3.22"
tracing-tracy = { version = "0.11.4", optional = true, features = ["enable", "ondemand"] }
tracy-client = { version = "0.18.2", optional = true, features = ["enable", "ondemand"] }
ztracing_macro = { package = "moon-ztracing-macro", path = "../moon-ztracing-macro" }

[lints]
rust = { unexpected_cfgs = { level = "warn", check-cfg = ["cfg(ztracing)", "cfg(ztracing_with_memory)"] } }
